Add meta and favicon tags to improve the SEO of the page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="language" content="spanish" />
+    <meta name="copyright" content="Blanche & Asociados" />
+    <meta name="author" content="Gerardo Blanche" />
+    <meta name="audience" content="all" />
+    <meta
+      name="description"
+      content="Somos Punto Colombres, un espacio de crecimiento, conexion y concrecion. El primer HUB que reune Tecnologia y Triple Impacto en Argentina"
+    />
+    <meta name="robots" content="index, all, follow" />
+    <link rel="icon" type="image/svg+xml" href="/public/Growgreen-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Punto Colombres - HUB empresarial</title>
   </head>
   <body>
     <div id="root"></div>
