--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <title>Punto Colombres - HUB empresarial</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="text" name="lastname" />
+      <input type="email" name="email" />
+      <input type="text" name="telephone" />
+      <input type="text" name="studies" />
+      <textarea name="comments"></textarea>
+    </form>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
