cambie el icono de la pagina web

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Somos Punto Colombres, un espacio de crecimiento, conexion y concrecion. El primer HUB que reune Tecnologia y Triple Impacto en Argentina"
     />
     <meta name="robots" content="index, all, follow" />
-    <link rel="icon" type="image/svg+xml" href="/public/Growgreen-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Punto Colombres - HUB empresarial</title>
   </head>
