cambie el nombre de los datos del form para que apareezcan en español en netlify

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   </head>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
-      <input type="text" name="lastname" />
-      <input type="email" name="email" />
-      <input type="text" name="telephone" />
-      <input type="text" name="studies" />
+      <input type="text" name="Nombre" />
+      <input type="text" name="Apellido" />
+      <input type="email" name="Email" />
+      <input type="text" name="Telefono" />
+      <input type="text" name="Estudios" />
       <textarea name="comments"></textarea>
     </form>
 
