--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input type="email" name="Email" />
       <input type="text" name="Telefono" />
       <input type="text" name="Estudios" />
-      <textarea name="comments"></textarea>
+      <textarea name="Comentarios"></textarea>
     </form>
 
     <div id="root"></div>
